@@ -39,7 +39,7 @@
             {% usage_count_enabled as uc_enabled %}
             {% if uc_enabled and usage_object %}
                 <div class="usagecount">
-                    <a href="{{ usage_object.usage_url }}">{% blocktrans count useage_count=usage_object.get_usage.count %}Used {{ useage_count }} time{% plural %}Used {{ useage_count }} times{% endblocktrans %}</a>
+                    <a href="{{ usage_object.usage_url }}">{% blocktrans count usage_count=usage_object.get_usage.count %}Used {{ usage_count }} time{% plural %}Used {{ usage_count }} times{% endblocktrans %}</a>
                 </div>
             {% endif %}
             {% if add_link %}
